# layoutd-cli

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml
.github/workflows/: layoutd.yml  release.yml
crates/layoutd-cli/: Cargo.toml
crates/layoutd-cli/src/: ack.rs  main.rs  sarif.rs
crates/layoutd-cli/tests/: cli_integration.rs
crates/layoutd-cli/tests/fixtures/: vault_v1.json  vault_v2_danger.json  vault_v2_safe.json  vault_v2_widen.json  vault_zc.rs
crates/layoutd-core/: Cargo.toml
crates/layoutd-core/src/: borsh.rs  classify.rs  diff.rs  hints.rs  idl.rs  lib.rs  source.rs  zerocopy.rs
crates/layoutd-core/tests/: classify_tests.rs  negative_corpus.rs  pipeline.rs  proptest_tests.rs  roundtrip_tests.rs
